[package]
name = "jsonpp"
version = "2.0.1"
authors = ["Florian Lackner <florian.lackner@gmail.com>"]
description = """
Reads json either from stdin or a file and pretty prints it on stdout.
"""
license = "GPL-3.0"
repository = "https://github.com/flo-l/jsonpp-rs"
readme = "README.md"
edition = "2018"

[dependencies]
serde_json = {version = "1.0", features = ["unbounded_depth"]}
serde-transcode = "1.0"
clap = "~2.31"
error-chain = "0.12"
filebuffer = "0.4.0"
